Modify: html to include footer, Style: correct footer styles

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
         </ul>
       </section>
     </main>
+
+    <footer>
+      <p>
+        &copy; <span id="currentTime"></span>Created by Ebenezer Kwabena Oware
+        <span>|</span> Computer Science Student <span>|</span>
+        <a
+          href="https://github.com/Oware-Ebenezer"
+          rel="noopener"
+          target="_blank"
+          >GitHub</a
+        >
+      </p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
