style: switch position for result displaying

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <label for="ppi">PPI (pixels per inch)</label>
         <input id="ppi" name="ppi" type="number" step="any" value="96" />
-
+        <div id="result" aria-live="polite" class="result"></div>
         <div class="actions">
           <button id="convertBtn" type="button">Convert</button>
           <button id="swapBtn" type="button" title="Swap from & to">
@@ -59,7 +59,6 @@
           </button>
           <button id="clearBtn" type="button">Clear</button>
         </div>
-        <div id="result" aria-live="polite"></div>
       </form>
       <section class="notes">
         <h2>Notes</h2>
